# echo

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.claude/: settings.local.json
.claude/hooks/: session-start.py  statusline.py
.codex/hooks/: session-start.py
.github/workflows/: ci.yml
.trellis/: .template-hashes.json  .version
.trellis/spec/backend/: agent-recommendation-flow.md  database-guidelines.md  directory-structure.md  error-handling.md  index.md  logging-guidelines.md  quality-guidelines.md
.trellis/spec/frontend/: component-guidelines.md  directory-structure.md  hook-guidelines.md  index.md  quality-guidelines.md  state-management.md  (+1 more)
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  dependencies.py  exceptions.py  main.py
backend/app/agent/: graph.py  nodes.py  state.py
backend/app/data/: products.py
backend/app/routers/: chat.py  feedback.py  recommend.py  session.py  voice.py
backend/app/schemas/: base.py  chat.py  persona.py  product.py  session.py  voice.py
backend/app/services/: catalog.py  persona.py  recommendation.py  session.py  voice.py
backend/app/utils/: embeddings.py
backend/tests/: conftest.py  test_agent_graph.py  test_persona.py  test_recommend_router.py  test_session_router.py  test_voice_router.py
frontend/: .dockerignore  Dockerfile  next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
plans/: peaceful-dancing-cosmos.md
scripts/: container-down.sh  container-start.sh  dev.sh
(+80 files in other folders)
